--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
